# sciforge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXPERIMENT_CATALOG.md  PHYSICS_PRIMITIVES_PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/commands/: add-physics-module.md  create-experiment.md  run-tests.md
.github/workflows/: ci.yml
examples/amo/: atom_interferometer.py  doppler_natural_linewidth.py  frequency_comb.py  jaynes_cummings.py  laser_cooling_molasses.py  mot_restoring_force.py  optical_bloch_equations.py  ramsey_spectroscopy.py  saturation_power_broadening.py  spin_squeezing.py
examples/astrophysics/: accretion_disk_temperature.py  eddington_luminosity.py  hydrostatic_equilibrium_polytrope.py  main_sequence_scaling.py  orbital_decay_gw.py  radiative_transfer_optical_depth.py  virial_theorem_nbody.py
examples/chaos/: double_pendulum.py  duffing_oscillator.py  fpu_chain.py  kicked_rotor.py  logistic_map.py  lorenz_attractor.py  plot_mandelbrot.py
examples/circuits/: coupled_rlc_modes.py  rc_circuit.py  rl_transient.py  rlc_resonance.py
examples/condensed_matter/: bcs_gap_temperature.py  berry_curvature_integration.py  chern_insulator.py  debye_heat_capacity.py  dos_1d_2d_3d.py  drift_diffusion_iv.py  drude_conductivity.py  finite_chain_edge_states.py  ginzburg_landau_vortices.py  graphene_dirac_cones.py  hall_effect_classical.py  heisenberg_monte_carlo.py  hubbard_mott_gap.py  hysteresis_domain_model.py  integer_qhe_edge.py  josephson_junction.py  kronig_penney_band_gaps.py  london_penetration_depth.py  metal_insulator_anderson.py  moire_flat_band.py  mos_capacitor_cv.py  phonon_dispersion_1d.py  pn_junction_depletion.py  quantum_hall_landau.py  square_lattice_fermi_surface.py  ssh_model_edge_states.py  t_j_model.py  thermal_conductivity_phonon.py  tight_binding_1d_chain.py  xy_model_vortices.py
examples/electromagnetism/: ampere_law_verification.py  capacitor_edge_effects.py  cavity_resonator.py  cerenkov_radiation.py  corona_discharge.py  dielectric_capacitor.py  dipole_radiation_pattern.py  electrostatic_motor.py  em_wave_maxwell.py  em_wave_propagation.py  energy_in_efield.py  faraday_induction.py  gauss_law_flux.py  larmor_radiation.py  magnetic_hysteresis.py  method_of_images.py  motional_emf.py  mutual_inductance.py  solenoid_field.py  synchrotron_radiation.py  transmission_line_reflections.py  waveguide_modes.py
examples/emwaves/: diffraction_grating.py  polarization.py
examples/fields/: current_loop_biot_savart.py  dipole_multipole_scaling.py  electric_dipole_field.py  gravitational_potential.py  magnetic_field_loop.py  point_charge_field.py
examples/fluid_dynamics/: coanda_effect.py  plateau_rayleigh.py
examples/mechanics/: action_angle.py  atwood_machine.py  bead_on_hoop.py  billiards_2d.py  canonical_transforms.py  capstan_equation.py  catenary.py  collision_1d_elastic.py  collision_1d_inelastic.py  conservative_forces.py  constant_acceleration.py  coriolis_deflection.py  coupled_pendula.py  driven_pendulum_chaos.py  effective_potential.py  elastic_collision.py  escape_velocity.py  fermat_principle.py  foucault_pendulum.py  gyroscope_precession.py  hamiltonian_pendulum.py  hard_sphere_gas.py  hill_sphere.py  kepler_problem.py  lagrange_points.py  lagrangian_eom.py  liouville_theorem.py  moment_of_inertia_numerical.py  n_body_gravity.py  noether_angular_momentum.py  noether_energy.py  normal_modes.py  pendulum_comparison.py  physical_pendulum.py  poisson_brackets.py  precession_perturbation.py  projectile_drag.py  rigid_body_rotation.py  rocket_equation.py  rolling_resistance.py  (+7 more)
examples/numerical/: advection_schemes.py  bouncing_ball.py  brachistochrone.py  burgers_shock.py  clt_demo.py  conservation_tracker.py  constraint_pendulum.py  continuity_conservation.py  convolution_theorem.py  diffusion_explicit_implicit.py  fft_basics.py  integrator_comparison.py  kepler_symplectic.py  long_time_stability.py  lorenz_sensitivity.py  mcmc_sampling.py  monte_carlo_integration.py  multigrid_vcycle.py  poisson_solvers.py  psd_noisy_oscillator.py  random_walk_diffusion.py  spectral_diffusion.py  stiff_ode_demo.py  symplectic_integrators.py  wave_dispersion.py
examples/optics/: airy_disk.py  attosecond_generation.py  birefringence.py  brewster_angle.py  coherence_length_visibility.py  double_slit_interference.py  fabry_perot_cavity.py  four_wave_mixing.py  fresnel_diffraction.py  (+13 more)
src/: .gitignore
tests/: __init__.py
(+208 files in other folders)
